Added unit tests

--- a/cybernetic_trial/templates/prettify.html
+++ b/cybernetic_trial/templates/prettify.html
@@ -94,7 +94,7 @@ body {
     }
     </style>
 
-    <form id="post-form" method="POST" action="prettify">
+    <form id="post-form" method="POST" action="">
     {% csrf_token %}
     <label>Enter the number</label>
     <input type="text" name="input_number" id="input_number" width="100px" />
